--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "teste_django"}]
 python = "^3.11"
 django = "^4.2.1"
 environs = "^9.5.0"
+django-bootstrap5 = "^23.1"
 
 
 [build-system]
