--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ environs = "^9.5.0"
 django-bootstrap5 = "^23.1"
 black = "^23.3.0"
 pillow = "^9.5.0"
+dj-database-url = "^2.0.0"
 
 
 [build-system]
