--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ django-bootstrap5 = "^23.1"
 black = "^23.3.0"
 pillow = "^9.5.0"
 dj-database-url = "^2.0.0"
+psycopg2 = "^2.9.6"
 
 
 [build-system]
